# FastAPI-TDD

./: Makefile  README.md  docker-compose.yml  pyproject.toml
store/: main.py  routers.py
store/controllers/: product.py
store/core/: settings.py
store/models/: base.py
store/schemas/: product.py
store/usecases/: product.py
tests/: conftest.py  factories.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
